Fixes view-schedule table scrolling and shift recurrence duplication.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -235,7 +235,7 @@ select {
     background-color: #dd4245;
 }
 
-#schedule-output.items td{
+#schedule-output-table.items td{
     text-align: center;
 }
 
